# Driver-Sleep-Detection-System

./: .gitignore  README.md  app.py  demo.py  pyproject.toml  requirements.txt  test_s3.py
config/: schema.yaml
reports/: data_validation.json
sleep-detect/: pyvenv.cfg
sleep-detect/Scripts/: activate  activate.bat  jp.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/configuration/: aws_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/database/: mongodb_client.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/notebook/: aws_s3_demo.ipynb
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/routes/: auth_routes.py  main_routes.py
src/utils/: main_utils.py
static/: style.css
templates/: car_system.html  dashboard.html  home.html  index.html  login.html  result.html  signup.html
